--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>piano-playbook-pro</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Piano Playbook Pro - Interactive Piano Learning Platform</title>
+    <meta name="description" content="Master piano with AI-powered lessons, interactive practice tools, and personalized feedback" />
+    <meta name="author" content="Piano Playbook Pro" />
+    <meta name="keywords" content="piano, learn piano, music education, piano lessons, interactive learning" />
 
-    <meta property="og:title" content="piano-playbook-pro" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Piano Playbook Pro - Interactive Piano Learning Platform" />
+    <meta property="og:description" content="Master piano with AI-powered lessons, interactive practice tools, and personalized feedback" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
